--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Factorial</title>
+    <link rel="stylesheet" href="main.css">
+     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Calculo factorial de un número.</h1>
+    <h1>Calculo factorial de un número: </h1>
     <p id="resultado"></p>
     
     <script src="./main.js"></script>
