--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
      <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Calculo factorial de un número: </h1>
+    <div class="container">
+    <h1>Cálculo factorial de un número.</h1>
     <p id="resultado"></p>
+    </div>
     
     <script src="./main.js"></script>
 </body>
